--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.drawer-side a.active {
+    color: white !important;
+}
+.drawer-side a {
+    background-color:transparent !important;
+     color: black;
+}
